--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,145 @@
-/* You can add global styles to this file, and also import other style files */
+ion-content {
+  --blue-1: #3c429e;
+  --blue-2: #4c52ad;
+  --yellow-1: #fac742;
+  --white: #fff;
+  --grey-1: #ededed;
+  --shadow-dark: rgba(0, 0, 0, 0.3);
+  --shadow-light: rgba(255, 255, 255, 0.1);
+}
+
+ion-content, ion-header, ion-footer {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ion-content {
+  --background: var(--blue-1);
+  --ion-background-color: var(--blue-1);
+  --ion-text-color: var(--white);
+}
+
+ion-card.container {
+  width: 400px;
+  height: 80vh;
+  background-color: var(--blue-2);
+  border-radius: 20px;
+  --box-shadow: 10px 10px 10px var(--shadow-dark);
+}
+
+ion-card.upper-data {
+  position: relative;
+  overflow: hidden;
+  height: 50%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+ion-card.lower-data {
+  position: relative;
+  overflow: hidden;
+  height: 50%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+ion-card.upper-data img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.weather-data {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: var(--shadow-dark);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.location {
+  color: var(--white);
+  text-align: center;
+  font-size: 1.2em;
+}
+
+.temperature {
+  color: var(--white);
+  font-size: 4em;
+  text-align: center;
+  font-weight: 900;
+}
+
+.more-info-label {
+  color: var(--white);
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.more-info-conatiner {
+  flex: 1;
+  background-color: var(--shadow-light);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  margin-top: 1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.info-block {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+.info-block-label {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-block-label img {
+  width: 2em;
+}
+
+.info-block-label span {
+  color: var(--white);
+  font-size: 0.8em;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.info-block-value {
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: var(--white);
+}
+
+.search-input {
+  width: 100%;
+  --padding-start: 10px;
+  --padding-end: 10px;
+  --padding-top: 10px;
+  --padding-bottom: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.info-block-sun img {
+  width: 2em;
+}
